<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.detail">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/pd_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/pd_blood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/pd_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/pd_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </TableRow>
        <!--<TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="17sp"/>
        </TableRow>-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_date"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/pd_lastd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nrc"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/pd_nrc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/pd_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/pd_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="30sp"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>
</RelativeLayout>