<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.addDonor"
    android:background="#F8F8F8">

    <ImageView
        android:id="@+id/ap_profile"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9"
        android:layout_margin="10dp"
        android:layout_below="@+id/ap_profile">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:weightSum="4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person_black_24dp"
                android:layout_weight="3"
                android:contentDescription="@string/app_name" />
            <EditText
                android:id="@+id/add_donor_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:background="#ffffff"
                android:maxLines="1"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:weightSum="4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_opacity_black_24dp"
                android:layout_weight="3"
                android:contentDescription="@string/app_name" />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:weightSum="4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_opacity_black_24dp"
                android:layout_weight="3"
                android:contentDescription="@string/app_name" />
            <EditText
                android:id="@+id/add_donor_amt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/amount"
                android:background="#ffffff"
                android:maxLines="3"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:weightSum="4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_contact_phone_black_24dp"
                android:layout_weight="3"
                android:contentDescription="@string/app_name" />
            <EditText
                android:id="@+id/add_donor_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:background="#ffffff"
                android:maxLines="1"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:weightSum="4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person_pin_circle_black_24dp"
                android:layout_weight="3"
                android:contentDescription="@string/app_name" />
            <EditText
                android:id="@+id/add_donor_addr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:hint="@string/address"
                android:maxLines="1"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:weightSum="4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_featured_video_black_24dp"
                android:layout_weight="3"
                android:contentDescription="@string/app_name" />
            <EditText
                android:id="@+id/add_donor_nrc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:hint="@string/nrc"
                android:maxLines="1"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:weightSum="4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_group_black_24dp"
                android:layout_weight="3"
                android:contentDescription="@string/app_name" />
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </Spinner>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/d_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">
            <RadioButton
                android:id="@+id/d_rdo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />
            <RadioButton
                android:id="@+id/d_rdo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center|bottom">
            <Button
                android:id="@+id/pdsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_data"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>